[tool.poetry]
name = "githublfs"
version = "0.1.0"
description = "Simple library to commit lfs files to Github repos"
authors = ["Anès Foufa <anes.foufa@upply.com>"]
readme = "readme.rst"

[tool.poetry.dependencies]
python = "^3.7"
PyGithub = "^1.55"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
mypy = "^0.971"
black = "^22.6.0"
twine = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
