[project]
name = "githublfs"
version = "0.2.0"
description = "Simple library to commit lfs files to Github repos"
readme = "readme.rst"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "Anès Foufa", email = "anes.foufa@upply.com"}]
classifiers = [
    "Topic :: Software Development :: Version Control",
    "Topic :: Software Development :: Version Control :: Git",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["Github", "LFS"]
urls = {Homepage = "https://github.com/AnesFoufa/githublfs"}
packages = [{include = "githublfs"}]
dependencies = [
    "PyGithub>=1.55",
    "requests>=2.28.1",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "ruff>=0.11.0",
    "twine>=4.0.1",
    "requests-mock>=1.9.3",
    "pytest>=7.1.2",
]

[build-system]
requires = ["uv-build>=0.7"]
build-backend = "uv_build"
